[Polyam] Fix layout shift caused by "Who to follow" widget
Port 511e10df3449d93616828db471ce6b562a075c0a to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/inline_follow_suggestions.scss
+++ b/app/javascript/flavours/polyam/styles/components/inline_follow_suggestions.scss
@@ -83,8 +83,10 @@
     }
 
     &__scrollable {
+      box-sizing: border-box;
       display: flex;
       flex-wrap: nowrap;
+      min-height: 228px;
       gap: 16px;
       padding: 16px;
       scroll-snap-type: x mandatory;
